--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -7,12 +7,9 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-   <h:body>   
-   
-   	<p:growl id="messages"/>
-	
+   <h:body>   	
 		<p:menubar rendered="#{autenticator.logado}">
-	        <p:menuitem value="Início" icon="ui-icon-home" url="home.jsf"/>
+	        <p:menuitem value="Início" icon="ui-icon-home" actionListener="#{homeBean.redirectHome()}" />
 	 		
 	 		<f:facet name="options">
 	            <p:commandButton type="submit" value="Sair" icon="ui-icon-extlink"
