--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -9,7 +9,7 @@
 	
     <h:head>
     	<link rel="shortcut icon" href="#{request.contextPath}/img/dinheiro32.png"  type="image/png"/>
-        <title>proFinance</title>
+        <title>ProFinance</title>
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
         <h:outputScript library="primefaces" name="jquery/jquery.js"/>
         <h:outputStylesheet library="css" name="proFinance.css" />
