--- a/src/main/webapp/resources/css/proFinance.css
+++ b/src/main/webapp/resources/css/proFinance.css
@@ -22,8 +22,8 @@ body{
 	background-image: url(#{request.contextPath}/img/socios200.png) !important;
 }
 
-.btnHistoricos {
-	background-image: url(#{request.contextPath}/img/Historicos200.png) !important;
+.btnOcorrencias {
+	background-image: url(#{request.contextPath}/img/ocorrencias200.png) !important;
 }
 
 .btnProjetos {
@@ -39,3 +39,10 @@ body{
 .greenTexto{
 	color:green !important;
 }
+
+.nav { height: 42px;}
+    .nav ul { list-style: none; }
+    .nav ul li{float: left; margin-top: 6px; padding: 6px; border-right: 1px solid #ACACAC;}
+    .nav ul li:first-child{ padding-left: 0;}
+    .nav ul li a { }
+    .nav ul li a:hover{ text-decoration: underline;}
