--- a/src/main/webapp/templates/templateMobile.xhtml
+++ b/src/main/webapp/templates/templateMobile.xhtml
@@ -12,6 +12,8 @@
 	<h:outputStylesheet library="css/themes" name="mobileTheme.css" />
 	<h:outputStylesheet library="css/themes" name="jquery.mobile.icons.min.css" />
 	<h:outputStylesheet library="css" name="proFinanceMobile.css" />
+	<h:outputScript library="js" name="proFinance.js" />
+	
 </h:head>
 
 <h:body>
