Cadastro de Indexador

--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -11,7 +11,8 @@
    
 		<p:menubar rendered="#{autenticator.logado}" style="z-index: 1000; position: fixed; left: 0; top: 0; width: 99.3%;">
 	        <p:menuitem value="Início" icon="ui-icon-home" actionListener="#{homeBean.redirectHome()}" />
-	        <p:menuitem  containerStyle="margin-left:40%">
+	        <p:menuitem value="Indexadores" icon="ui-icon-suitcase" actionListener="#{homeBean.redirectIndexador()}" />
+	        <p:menuitem  containerStyle="margin-left:33%">
 			    <h:link style="cursor:initial">
 			        <p:graphicImage value="/img/ProFinanceTitle.png"/>
 			    </h:link>
