--- a/src/main/webapp/templates/templateMobile.xhtml
+++ b/src/main/webapp/templates/templateMobile.xhtml
@@ -41,7 +41,7 @@
 						<p:menu>
 						    <p:menuitem value="Início" actionListener="#{homeBean.redirectHome}" icon="ui-icon-home"/>
 						    <p:menuitem value="Indexadores" actionListener="#{homeBean.redirectIndexador}"  icon="ui-icon-info"/>
-						    <p:menuitem value="Sócio/Empresa" actionListener="#{homeBean.redirectSocios}"  icon="ui-icon-user"/>
+						    <p:menuitem value="Investidores" actionListener="#{homeBean.redirectSocios}"  icon="ui-icon-user"/>
 						    <p:menuitem value="Projetos" actionListener="#{homeBean.redirectProjetos}" icon="ui-icon-shop"/>
 						    <p:menuitem value="Ocorrências" actionListener="#{homeBean.redirectOcorrenciaProjeto}" icon="ui-icon-bullets"/>
 						    <p:menuitem value="Simulações" actionListener="#{homeBean.redirectSimulacao}" />
