--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -12,7 +12,8 @@
 		<p:menubar rendered="#{autenticator.logado}" style="z-index: 1000; position: fixed; left: 0; top: 0; width: 99.3%;">
 	        <p:menuitem value="Início" icon="ui-icon-home" actionListener="#{homeBean.redirectHome()}" />
 	        <p:menuitem value="Indexadores" icon="ui-icon-suitcase" actionListener="#{homeBean.redirectIndexador()}" />
-	        <p:menuitem  containerStyle="margin-left:35%">
+	        <p:menuitem value="Relatórios" icon="ui-icon-bookmark" actionListener="#{homeBean.redirectRelatorios()}" />
+	        <p:menuitem  containerStyle="margin-left:28%">
 			    <h:link style="cursor:initial">
 			        <p:graphicImage value="/img/ProFinanceTitle.png"/>
 			    </h:link>
